refactor task BJS2-60330